trunk/Archive2/20/ecfa424d33e1e2/output
main.cpp:15:8: error: no unique final overrider for 'virtual void B::f()' in 'E'
 struct E : J, D {
        ^
